--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "^4.21.2",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
-    "sequelize": "^6.37.5"
+    "node-cron": "^3.0.3",
+    "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1"
   }
 }
